tests/generators/generators.exp
Error: class.js:2
  2:   *stmt_yield(): Generator<number, void, void> {
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Generator. This type is incompatible with an implicitly-returned Generator<Yield,void,Next>
  Type argument `Yield` is incompatible:
      4:     yield ""; // error: string ~> number
                   ^^ string. This type is incompatible with
      2:   *stmt_yield(): Generator<number, void, void> {
                                    ^^^^^^ number

Error: class.js:15
 15:       (b : string); // error: number ~> string
            ^ number. This type is incompatible with
 15:       (b : string); // error: number ~> string
                ^^^^^^ string

Error: class.js:24
 24:     return ""; // error: string ~> number
         ^^^^^^^^^^ generator return. This type is incompatible with the expected return type of
 23:   *stmt_return_err(): Generator<void, number, void> {
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Generator
  Type argument `Return` is incompatible:
     24:     return ""; // error: string ~> number
                    ^^ string. This type is incompatible with
     23:   *stmt_return_err(): Generator<void, number, void> {
                                               ^^^^^^ number

Error: class.js:28
 28:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ number. This type is incompatible with
 28:     var x: boolean = yield 0; // error: number ~> boolean
                ^^^^^^^ boolean

Error: class.js:49
 49:       var x: number = yield; // error: string ~> number
                           ^^^^^ string. This type is incompatible with
 49:       var x: number = yield; // error: string ~> number
                  ^^^^^^ number

Error: class.js:67
 67:     var x: number = yield *inner(); // error: string ~> number
                         ^^^^^^^^^^^^^^ string. This type is incompatible with
 67:     var x: number = yield *inner(); // error: string ~> number
                ^^^^^^ number

Error: class.js:98
 98: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                             ^ number. This type is incompatible with
 98: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                                 ^^^^^^ string

Error: class.js:104
104:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ string. This type is incompatible with
104:   (infer_stmt_next : boolean) // error: string ~> boolean
                          ^^^^^^^ boolean

Error: class.js:122
122:   (x : number) // error: string ~> number
        ^ string. This type is incompatible with
122:   (x : number) // error: string ~> number
            ^^^^^^ number

Error: class.js:125
125: examples.delegate_next_iterable([]).next(""); // error: Iterator has no next value
                                              ^^ string. This type is incompatible with the expected param type of
500: type Iterator<+T> = $Iterator<T,void,void>;
                                          ^^^^ undefined. See lib: <BUILTINS>/core.js:500

Error: class.js:128
128:   (x : string) // error: number ~> string
        ^ number. This type is incompatible with
128:   (x : string) // error: number ~> string
            ^^^^^^ string

Error: class_failure.js:5
  5:     var x: boolean = yield 0; // error: number ~> boolean
                          ^^^^^^^ number. This type is incompatible with
  5:     var x: boolean = yield 0; // error: number ~> boolean
                ^^^^^^^ boolean

Error: class_failure.js:12
 12: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                             ^ number. This type is incompatible with
 12: for (var x of examples.infer_stmt()) { (x : string) } // error: number ~> string
                                                 ^^^^^^ string

Error: class_failure.js:19
 19:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ string. This type is incompatible with
 19:   (infer_stmt_next : boolean) // error: string ~> boolean
                          ^^^^^^^ boolean

Error: generators.js:1
  1: function *stmt_yield(): Generator<number, void, void> {
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Generator. This type is incompatible with an implicitly-returned Generator<Yield,void,Next>
  Type argument `Yield` is incompatible:
      3:   yield ""; // error: string ~> number
                 ^^ string. This type is incompatible with
      1: function *stmt_yield(): Generator<number, void, void> {
                                           ^^^^^^ number

Error: generators.js:14
 14:     (b : string); // error: number ~> string
          ^ number. This type is incompatible with
 14:     (b : string); // error: number ~> string
              ^^^^^^ string

Error: generators.js:23
 23:   return ""; // error: string ~> number
       ^^^^^^^^^^ generator return. This type is incompatible with the expected return type of
 22: function *stmt_return_err(): Generator<void, number, void> {
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Generator
  Type argument `Return` is incompatible:
     23:   return ""; // error: string ~> number
                  ^^ string. This type is incompatible with
     22: function *stmt_return_err(): Generator<void, number, void> {
                                                      ^^^^^^ number

Error: generators.js:27
 27:   var x: boolean = yield 0;
                        ^^^^^^^ number. This type is incompatible with
 27:   var x: boolean = yield 0;
              ^^^^^^^ boolean

Error: generators.js:30
 30: for (var x of infer_stmt()) { (x : string) } // error: number ~> string
                                    ^ number. This type is incompatible with
 30: for (var x of infer_stmt()) { (x : string) } // error: number ~> string
                                        ^^^^^^ string

Error: generators.js:35
 35:   (infer_stmt_next : boolean) // error: string ~> boolean
        ^^^^^^^^^^^^^^^ string. This type is incompatible with
 35:   (infer_stmt_next : boolean) // error: string ~> boolean
                          ^^^^^^^ boolean

Error: generators.js:65
 65:     var x: number = yield; // error: string ~> number
                         ^^^^^ string. This type is incompatible with
 65:     var x: number = yield; // error: string ~> number
                ^^^^^^ number

Error: generators.js:79
 79:   (x : number) // error: string ~> number
        ^ string. This type is incompatible with
 79:   (x : number) // error: string ~> number
            ^^^^^^ number

Error: generators.js:87
 87:   var x: number = yield *inner(); // error: string ~> number
                       ^^^^^^^^^^^^^^ string. This type is incompatible with
 87:   var x: number = yield *inner(); // error: string ~> number
              ^^^^^^ number

Error: generators.js:94
 94: delegate_next_iterable([]).next(""); // error: Iterator has no next value
                                     ^^ string. This type is incompatible with the expected param type of
500: type Iterator<+T> = $Iterator<T,void,void>;
                                          ^^^^ undefined. See lib: <BUILTINS>/core.js:500

Error: generators.js:100
100:   (x : string) // error: number ~> string
        ^ number. This type is incompatible with
100:   (x : string) // error: number ~> string
            ^^^^^^ string

Error: generators.js:128
128:   (multiple_return_result.value: void); // error: number|string ~> void
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
128:   (multiple_return_result.value: void); // error: number|string ~> void
                                      ^^^^ undefined

Error: generators.js:128
128:   (multiple_return_result.value: void); // error: number|string ~> void
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
128:   (multiple_return_result.value: void); // error: number|string ~> void
                                      ^^^^ undefined

Error: refi.js:5
  5:   (x.a: string); // error
        ^^^ undefined. This type is incompatible with
  5:   (x.a: string); // error
             ^^^^^^ string

Error: refi.js:22
 22:   (x.a: string); // error
        ^^^ undefined. This type is incompatible with
 22:   (x.a: string); // error
             ^^^^^^ string

Error: return.js:5
  5:   (ret.value: void); // error: string | number ~> void
        ^^^^^^^^^ number. This type is incompatible with
  5:   (ret.value: void); // error: string | number ~> void
                   ^^^^ undefined

Error: return.js:5
  5:   (ret.value: void); // error: string | number ~> void
        ^^^^^^^^^ string. This type is incompatible with
  5:   (ret.value: void); // error: string | number ~> void
                   ^^^^ undefined

Error: return.js:20
 20:   (refuse_return_result.value: string); // error: number | void ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 20:   (refuse_return_result.value: string); // error: number | void ~> string
                                    ^^^^^^ string

Error: return.js:20
 20:   (refuse_return_result.value: string); // error: number | void ~> string
        ^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined. This type is incompatible with
 20:   (refuse_return_result.value: string); // error: number | void ~> string
                                    ^^^^^^ string

Error: throw.js:11
 11:   (catch_return_value : string); // error: number ~> string
        ^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 11:   (catch_return_value : string); // error: number ~> string
                             ^^^^^^ string

Error: throw.js:24
 24:   (yield_return_value: string); // error: number ~> string
        ^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 24:   (yield_return_value: string); // error: number ~> string
                            ^^^^^^ string


Found 35 errors
